--- a/CMS/src/assets/main.css
+++ b/CMS/src/assets/main.css
@@ -2,9 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-#app {
+/* #app {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   font-weight: normal;
-}
+} */
